--- a/SchoolManagementMVC/Views/UploadFiles/Create.cshtml
+++ b/SchoolManagementMVC/Views/UploadFiles/Create.cshtml
@@ -16,17 +16,13 @@
     <hr />
     @Html.ValidationSummary(true, "", new { @class = "text-danger" })
 
-    <div class="row">
-        <div class="col-xs-12 col-md-3">
-            <div class="form-group">
-                <label for="" class="control-label">Eliga una Posicion</label>
-                <select name="" id="chooseSelect" class="form-control">
-                    <option value="0">--Seleccione--</option>
-                    <option value="students">Estudiantes</option>
-                    <option value="employees">Empleados</option>
-                </select>
-            </div>
-        </div>
+    <div class="form-group">
+        <label for="" class="control-label col-md-2">Eliga una Posicion</label>
+        <select name="" id="chooseSelect" class="form-control">
+            <option value="0">--Seleccione--</option>
+            <option value="students">Estudiantes</option>
+            <option value="employees">Empleados</option>
+        </select>
     </div>
 
     <div class="form-group">
